Some modifications to the recursion theorem

--- a/text/biblio.bib
+++ b/text/biblio.bib
@@ -85,3 +85,12 @@
   year={1989},
   publisher={Cambridge University Press Cambridge}
 }
+@article{dalenrecursion,
+  title={Algorithms and decision problems: A crash course in recursion theory},
+  author={van Dalen, D.},
+  journal={G. Gabbay and F. Guenthner (eds.), Handbook of Philosophical Logic},
+	publisher={D. Reidel Publishing Company},
+  volume={1},
+  pages={409--478},
+  year={1983}
+}
