--- a/text/main.tex
+++ b/text/main.tex
@@ -47,6 +47,7 @@
 \newcommand{\PSPACE}{\mathtt{PSPACE}}
 \newcommand{\EXPTIME}{\mathtt{EXPTIME}}
 \newcommand{\EXPSPACE}{\mathtt{EXPSPACE}}
+\mathchardef\mhyphen="2D
 
 % Disabled Note Commands
 %\newcommand{\timeestimation}[1]{}
