--- a/text/introduction/for/for.tex
+++ b/text/introduction/for/for.tex
@@ -9,7 +9,7 @@
 				\alt 	`tl' <expression>
 				\alt 	<variable>
 
-		<statement-list> ::= <statement> \alt <statement> newline <statement-list>
+		<statement-list> ::= <statement> ;\alt <statement> ; <statement-list>
 
 		<block> ::= `{' <statement-list> `}'
 
